--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@skylerx/cypher",
+  "name": "@sklyerx/cypher",
   "version": "1.0.0",
   "description": "A library for encryption and decryption.",
   "main": "dist/index.js",
