--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@sklyerx/cypher",
+  "name": "@sklyerx/cypher-client",
   "version": "1.0.2",
-  "description": "A library for encryption and decryption.",
+  "description": "A library for encryption and decryption on the web.",
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
