--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "@sklyerx/cypher-client",
+  "name": "@sklyerx/cypher",
   "version": "1.0.2",
   "description": "A library for encryption and decryption on the web.",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon client.ts",
-    "build": "tsc"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
     "crypto",
